<resources>
    <string name="Canned">Canned</string>
    <string name="Sign_up">Sign up</string>
    <string name="EnterU">     Enter Username</string>
    <string name="EnterP">Enter Password</string>
    <string name="forgot_info">Forgot info?</string>
    <string name="login">Log in</string>
    <string name="app_name"> Canned</string>
    <string name="verifing">Verifying your account</string>
    <string name="new_intructions">Return to login after being verified by the manager </string>
    <string name="ent_username">Enter a username</string>
    <string name="ent_password">Enter a password</string>
    <string name="ent_first">Enter first name</string>
    <string name="ent_last">Enter last name</string>
    <string name="ent_mail">Enter your email</string>
    <string name="ent_birth">Enter birthdate, MMDDYY</string>
    <string name="inventory">Inventory</string>
    <string name="add_csv_file">Add a CSV file</string>
    <string name="csv_description">To add an initial file of food list items, please enter the file name.txt and then push the button below.</string>
    <string name="csv_name">Enter file name</string>
    <string name="belowThresholdButton">Low Stock Items</string>
    <string name="belowThresholdHeader">Low Stock Inventory</string>
    <string name="verified">Verified</string>
    <string name="conPass">Confirm Password</string>
    <string name="donors">Donators</string>

    <string name="manage_volunteers">Manage Volunteers</string>

    <string name="select_items">Select the items forgotten.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="send_email">Send email</string>
    <string name="record_donation">Record donations</string>
    <string name="record_distribution">Record Distribution</string>
    <string name="manage_inventory">Manage Inventory</string>
    <string name="title_activity_settings">Settings</string>
    <string name="email">Email</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="birthdate">Birthdate</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="categories">\t  Name  \t\t\t\t\t\t\t Quantity \t\t\t\t Size  \t \t \t Threshold</string>
    <string name="low_stock_button">Low Stock Inventory</string>
    <string name="add_location_button">Add/remove Storage Locations</string>
    <string name="manage_thresholds">Manage Thresholds</string>
    <string name="threhold">Thresholds</string>
    <string name="thresholdBanner">\t  Name  \t\t\t\t Quantity \t \t Threshold \t Depletion </string>
    <string name="Locations">Locations</string>
    <string name="addLocation" > Add Location</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enter_food">Enter food</string>
</resources>
